clusters/cl01tl/manifests/yubal-playlist/Namespace-yubal-playlist.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yubal-playlist
  labels:
    app.kubernetes.io/name: yubal-playlist
    app.kubernetes.io/instance: yubal-playlist
    app.kubernetes.io/part-of: yubal-playlist
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
