clusters/cl01tl/manifests/yubal-playlist/Service-yubal-playlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: yubal-playlist
  labels:
    app.kubernetes.io/instance: yubal-playlist
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yubal-playlist
    app.kubernetes.io/service: yubal-playlist
    helm.sh/chart: yubal-playlist-4.6.0
  namespace: yubal-playlist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: yubal-playlist
    app.kubernetes.io/name: yubal-playlist
