clusters/cl01tl/manifests/yubal-playlist/HTTPRoute-yubal-playlist.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yubal-playlist
  labels:
    app.kubernetes.io/instance: yubal-playlist
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yubal-playlist
    helm.sh/chart: yubal-playlist-4.6.0
  namespace: yubal-playlist
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "yubal-playlist.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: yubal-playlist
          namespace: yubal-playlist
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
